# reader

./: Actions.qml  CMakeLists.txt  Content.qml  Main.qml  main.cpp
